<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="50dp"
            android:gravity="center">

            <TextView
                android:id="@+id/help_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_header"
                android:textSize="30sp"
                android:textColor="#231f20"
                android:padding="20dp"
                android:gravity="center_horizontal"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/instructions_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions_header"
                android:textSize="20sp"
                android:textColor="#231f20"
                android:paddingTop="10dp"
                android:gravity="center_horizontal"
                android:textStyle="normal|bold"
                />

            <TextView
                android:id="@+id/instructions_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions_text"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:textColor="#231f20"
                android:paddingBottom="10dp"
                />

            <TextView
                android:id="@+id/restart_button_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restart_button_header"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:textColor="#231f20"
                android:paddingTop="10dp"
                android:textStyle="normal|bold"
                />

            <TextView
                android:id="@+id/restart_button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restart_button_text"
                android:textSize="20sp"
                android:textColor="#231f20"
                android:paddingBottom="10dp"
                android:gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/capture_button_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/capture_button_header"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:textColor="#231f20"
                android:paddingTop="10dp"
                android:textStyle="normal|bold"
                />

            <TextView
                android:id="@+id/capture_button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/capture_button_text"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:textColor="#231f20"
                android:paddingBottom="10dp"
                />

            <TextView
                android:id="@+id/setup_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setup_header"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:textColor="#231f20"
                android:paddingTop="10dp"
                android:textStyle="normal|bold"
                />

            <TextView
                android:id="@+id/setup_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setup_text"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:textColor="#231f20"
                android:paddingBottom="10dp"
                />

            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@drawable/rounded_button"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:layout_marginTop="100dp"
                android:text="@string/back"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:gravity="center"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>



</LinearLayout>