<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/camera_overlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.catchoom.test.SplashScreenActivity">

    <com.craftar.CraftARCameraView
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" >
    </com.craftar.CraftARCameraView>

    <!--Overlay Components-->

    <TextView
        android:id="@+id/overlay_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/overlay_body"
        android:layout_alignLeft="@+id/overlay_body"
        android:layout_alignTop="@+id/overlay_body"
        android:background="@android:color/black"
        android:text="@string/title"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textSize="30sp"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/overlay_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/overlay_body"
        android:layout_alignLeft="@+id/overlay_body"
        android:layout_alignTop="@+id/overlay_header"
        android:text="@string/not_available"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textSize="24sp"
        android:padding="100dp" />

    <ImageView
        android:id="@+id/overlay_body"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:src="@drawable/overlay_body_background">
    </ImageView>

    <!--Control Buttons-->

    <Button
        android:id="@+id/capture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/restart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />

</RelativeLayout>
